@@ -6,7 +6,8 @@ New features:
 -
 Bug fixes:
 ~~~~~~~~~~
--
+- Using the new getLanguageRevisions() method on the StateChangeInfo workflow
+  objects
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 -
